Update spec file to fix uploading datasets
