# backend/api/datasets_api.py
@@ -2,17 +2,17 @@ def list_datasets():
     return {}
 
 
-def create_dataset(dataset):
-    return {}
+def create_dataset(body):
+    return {"dataset": body}
 
 
 def get_dataset(id):
-    return {}
+    return {"id": id}
 
 
 def delete_dataset(id):
-    return {}
+    return {"id": id}
 
 
 def export_dataset(id):
-    return {}
+    return {"id": id}
